Fix horizontal overflow.

--- a/src/components/page_container/style.module.css
+++ b/src/components/page_container/style.module.css
@@ -4,5 +4,4 @@
   grid-row: 3;
   min-height: calc(100vh - 2*var(--large));
   z-index: 0;
-  overflow-x: hidden;
 }
